[package]
name = "buffer"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["buffer"]
description = "fixed sized buffer"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-buffer.git"
homepage = "https://github.com/nathanfaucett/rs-buffer"

[dependencies]
[dev-dependencies]
