[package]
name = "array"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["array"]
description = "fixed sized array"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-array.git"
homepage = "https://github.com/nathanfaucett/rs-array"

[dependencies]
collection_traits = {git = "https://github.com/nathanfaucett/rs-collection_traits", features=["no_std"]}

[dev-dependencies]
